src-tauri/agaric-sync/src/snapshot/snapshots/agaric_sync__snapshot__types__tests__snapshot_block_link_snapshot_shape.snap
---
source: agaric-sync/src/snapshot/types.rs
expression: block_link_fixture()
---
source_id: SRC01
target_id: TGT01
