src-tauri/agaric-sync/src/snapshot/snapshots/agaric_sync__snapshot__types__tests__snapshot_block_tag_snapshot_shape.snap
---
source: agaric-sync/src/snapshot/types.rs
expression: block_tag_fixture()
---
block_id: BLK02
tag_id: tag-important
