src-tauri/agaric-sync/src/snapshot/snapshots/agaric_sync__snapshot__types__tests__snapshot_page_alias_snapshot_shape.snap
---
source: agaric-sync/src/snapshot/types.rs
expression: page_alias_fixture()
---
page_id: PAGE01
alias: Q1 Roadmap
