src-tauri/agaric-sync/src/snapshot/snapshots/agaric_sync__snapshot__types__tests__snapshot_property_definition_snapshot_shape.snap
---
source: agaric-sync/src/snapshot/types.rs
expression: property_definition_fixture()
---
key: priority
value_type: select
options: "low,medium,high"
created_at: "[TIMESTAMP]"
